sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value i
  i=1
  ^AlgInsertionSort:4: error: not found: value i
  while(i<getNombreValeurs()){
        ^AlgInsertionSort:5: error: not found: value k
    k=i
    ^AlgInsertionSort:6: error: not found: value k
    while( k<0 || plusPetit(k-1,k)){
           ^AlgInsertionSort:6: error: not found: value k
    while( k<0 || plusPetit(k-1,k)){
                            ^AlgInsertionSort:6: error: not found: value k
    while( k<0 || plusPetit(k-1,k)){
                                ^AlgInsertionSort:7: error: not found: value k
      echange(k-1,k)
              ^AlgInsertionSort:7: error: not found: value k
      echange(k-1,k)
                  ^AlgInsertionSort:8: error: not found: value k
      k=k-1
      ^AlgInsertionSort:10: error: not found: value i
    i = i+1
    ^