sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  i=1
  while(i<getNombreValeurs()){
    k=i
    while( k<0 || plusPetit(k-1,k)){
      echange(k-1,k)
      k=k-1
    }
    i = i+1
  }
  
}